[package]
name = "textconf"
version = "0.1.0"
edition = "2021"
authors = ["daizutabi <daizutabi@gmail.com"]
description = "Generate a config file from text for Python's Hydra applications"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/daizutabi/textconf"
documentation = "https://github.com/daizutabi/textconf"
homepage = "https://github.com/daizutabi/textconf"
rust-version = "1.76"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.22.0"
